# ai-telegram-support-kit

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
src/ai_telegram_support_kit/: __init__.py  bot.py  config.py  llm.py  prompts.py  storage.py  triage.py
tests/: test_storage.py  test_triage.py
