[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-telegram-support-kit"
version = "0.1.0"
description = "Open-source starter kit for AI-assisted Telegram support bots."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Maria Gavrilyuk" }
]
dependencies = [
  "aiogram>=3.10.0",
  "openai>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]